Add initial index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html lang="th">
   <head><meta charset="UTF-8"><title>Hello TPC 3M</title></head>
   <body>
-    <h1>สวัสดี 3M Car Care!</h1>
+    <h1>สวัสดี 3M Car Care! the</h1>
   </body>
 </html>
